tests/error/comptime/compare_pointers3.bz
// error: invalid pointer comparison
// note: while evaluating expression at compile time
// note: lhs address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> *int32
{
	let i = 0;
	return &i;
}

function test()
{
	(consteval {
		let i = 0;
		foo() > &i;
	});
}
